--- a/src/css/main.css
+++ b/src/css/main.css
@@ -39601,6 +39601,28 @@ video {
   animation: bounce 1s infinite;
 }
 
+.flex-basis {
+  flex: 1 0 96%;
+}
+
+@media (min-width: 640px) {
+  .flex-basis {
+    flex: 1 0 45%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .flex-basis {
+    flex: 1 0 30%;
+  }
+}
+
+@media (min-width: 1280px) {
+  .flex-basis {
+    flex: 1 0 21%;
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
