--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -3,3 +3,22 @@
 @tailwind components;
 
 @tailwind utilities;
+
+.flex-basis {
+  flex: 1 0 96%;
+}
+@media (min-width: 640px) {
+  .flex-basis {
+    flex: 1 0 45%;
+  }
+}
+@media (min-width: 1024px) {
+  .flex-basis {
+    flex: 1 0 30%;
+  }
+}
+@media (min-width: 1280px) {
+  .flex-basis {
+    flex: 1 0 21%;
+  }
+}
